@@ -1,5 +1,5 @@
 man_MANS = libmicrohttpd.3
-EXTRA_DIST = $(man_MANS)
+EXTRA_DIST = $(man_MANS) Doxyfile
 
 DISTCLEANFILES = microhttpd.cps
 info_TEXINFOS = microhttpd.texi
